# QtNatTester

./: .gitignore  .gitignore.txt  CMakeLists.bak  CMakeLists.txt  README.md  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  nat_detect.cc  nat_detect.h  nat_detect.hpp  nat_detect_thread.cc  nat_detect_thread.h  natclient.cpp  natclient.h  toDo.md
Resources/: icon.icns
